docs: remove social icon in header & tweak hero icon size

--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -26,10 +26,11 @@ head:
         .header { position: static }
         .title-wrapper { display: none }
         .right-group { display: flex; margin-inline-start: auto }
+        .social-icons { display: none }
         .main-frame { padding-top: 0 }
       }
       .hero {
-        --size: min(9rem, calc(5rem + 6vw));
+        --size: min(9rem, calc(3rem + 7vw));
         .sl-link-button { border-radius: 0.5em; }
         .hero-html {
           font-size: var(--size);
